--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "mongofriends-api",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "apps.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.1"
   },
